# garbled-neural-network-experiments

./: .gitignore  Cargo.toml  readme.md
neural_nets/: cifar_test.py  data.py  discretize.py  models.py  reweight.py  save.py  train.py
neural_nets/CryptoNets/: model.json  weights.json
neural_nets/DINN_100/: labels.json  model.json  weights.json
neural_nets/DINN_30/: model.json  weights.json
neural_nets/DeepSecure/: model.json  weights.json
neural_nets/MiniONN_CIFAR/: labels.json  model.json  weights.json
neural_nets/MiniONN_MNIST/: model.json  weights.json
neural_nets/SecureML/: model.json  weights.json
src/: direct_tests.rs  dummy_tests.rs  garbling_benches.rs  layer.rs  main.rs  neural_net.rs  util.rs
