[package]
name = "garbled-neural-net-experiments"
version = "0.1.0"
authors = ["Brent Carmer <bcarmer@galois.com>"]
edition = "2018"
publish = false

[features]
nightly = ["fancy-garbling/nightly", "scuttlebutt/nightly"]

[dependencies]
ocelot = {git = "https://github.com/GaloisInc/swanky.git", branch = "dev"}
fancy-garbling = {git = "https://github.com/GaloisInc/swanky.git", branch = "dev"}
scuttlebutt = {git = "https://github.com/GaloisInc/swanky.git", branch = "dev"}
itertools = "0.8.0"
rand = "0.7.2"
serde = "1.0.101"
serde_json = "1.0.40"
criterion = "0.3.0"
ndarray = "0.13.0"
clap = "2.33.0"
pbr = "1.0.2"
time = "0.1.42"
colored = "1.8.0"
crossbeam = "0.7.2"
