[package]
name = "garbled-neural-net-experiments"
version = "0.1.0"
authors = ["Brent Carmer <bcarmer@galois.com>"]
edition = "2024"
publish = false

[dependencies]
fancy-garbling = { git = "https://github.com/GaloisInc/swanky.git" }
swanky-aes-rng = { git = "https://github.com/GaloisInc/swanky.git" }
swanky-channel = { git = "https://github.com/GaloisInc/swanky.git" }
swanky-ot-alsz-kos = { git = "https://github.com/GaloisInc/swanky.git" }
swanky-twopac = { git = "https://github.com/GaloisInc/swanky.git" }

clap = "2.33.0"
itertools = "0.14.0"
colored = "1.8.0"
ndarray = "0.13.0"
rand = "0.8"
serde = "1.0.228"
serde_json = "1.0.149"
